--- a/weather.css
+++ b/weather.css
@@ -74,7 +74,7 @@ body { background-color:#333; }
   position: absolute;
   top: 0;
   width: 100%;
-  z-index:1;
+  z-index:0;
   -webkit-animation: snow 10s linear infinite;
   -moz-animation: snow 10s linear infinite;
   -ms-animation: snow 10s linear infinite;
@@ -100,3 +100,13 @@ body { background-color:#333; }
   50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
   100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
 } 
+#mainpage{
+    width: 400px;
+    height: 400px;
+    z-index: 1;
+    background-color: white;
+    margin-left: auto;
+    margin-right: auto;
+   
+
+}
