--- a/weather.css
+++ b/weather.css
@@ -114,6 +114,7 @@ body { background-color:#333; }
 -webkit-border-radius: 50px;
 -moz-border-radius: 50px;
 border-radius: 50px;
+   
    transform: translate(-50%, -50%)
     
 }
@@ -121,7 +122,20 @@ border-radius: 50px;
 form {
   padding-top: 2%;
   text-align: center;
-  
-
+ 
 }
+
+#enterbar button{
+/*height: 50px;
+     width: 100px;*/
+ /* padding-top: 2%;*/
+  
+}
+
+/*button{
+  height: 20px;
+     width: 20px;
+
+}*/
+
 
