--- a/weather.css
+++ b/weather.css
@@ -64,12 +64,17 @@ span {
 }
 }*/
 
-body { background-color:#333; }
+body{ 
+  background-color:#333; 
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+}
 #snow{
   background: none;
   font-family: Androgyne;
   background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
-  height: 100%;
+  height: 150%;
   left: 0;
   position: absolute;
   top: 0;
@@ -117,6 +122,7 @@ border-radius: 50px;
    
    transform: translate(-50%, -50%)
    */
+
    top: 0%;
     left: 0%;
     bottom: 0%;
@@ -157,11 +163,18 @@ form {
      width: 20px;
 
 }*/
-#project_page{
-  background-color: yellow;
+#dataoutput{
+  width: 100%;
+    height: 150%;
+    z-index: 1;
+    background-color:white;
+    opacity: 0.6;
+    
   top:0;
   left:0;
-  width: 100%;
-  height: 100%;
+  
+  padding: 2%;
   display: none;
+ /* background-image: url("https://pbs.twimg.com/media/B-NeYdKCYAA_j6o.jpg");
+  background-size: cover;*/
 }
